Closed Bug 1772665 Opened 2 years ago Closed 2 years ago

init WebRenderImageProviderData::mDrawResult

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
103 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox101 --- wontfix
firefox102 --- wontfix
firefox103 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.
Regressed by: 1743761
No longer regressed by: 1711061
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1743761

Has Regression Range: --- → yes
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bf31bc4ad2bc
Initialize WebRenderImageProviderData::mDrawResult. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch

The patch landed in nightly and beta is affected.
:tnikkel, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(tnikkel)
Flags: needinfo?(tnikkel)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: