Bug 1772665. Initialize WebRenderImageProviderData::mDrawResult. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D148334